// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Button /> > can render with base theme 1`] = `
.c0 {
  padding: 8px 16px;
  border-radius: 4px;
  border: none;
  cursor: pointer;
  background-color: #3f606b;
  color: #fff;
}

.c0:disabled {
  background-color: #999;
  cursor: not-allowed;
}

<button
  class="c0"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> > can render with confirm theme 1`] = `
.c0 {
  padding: 8px 16px;
  border-radius: 4px;
  border: none;
  cursor: pointer;
  background-color: #3eb726;
  color: #fff;
}

.c0:disabled {
  background-color: #999;
  cursor: not-allowed;
}

<button
  class="c0"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> > can render with edit theme 1`] = `
.c0 {
  padding: 8px 16px;
  border-radius: 4px;
  border: none;
  cursor: pointer;
  background-color: #1741a4;
  color: #fff;
  margin-right: 8px;
}

.c0:disabled {
  background-color: #999;
  cursor: not-allowed;
}

<button
  class="c0"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> > can render with remove theme 1`] = `
.c0 {
  padding: 8px 16px;
  border-radius: 4px;
  border: none;
  cursor: pointer;
  background-color: #c32121;
  color: #fff;
}

.c0:disabled {
  background-color: #999;
  cursor: not-allowed;
}

<button
  class="c0"
  type="button"
>
  Button
</button>
`;
